Fix issues in profile and toggle visibilityFilter

--- a/src/components/visiblity-filter-input/visibility-filter-input.scss
+++ b/src/components/visiblity-filter-input/visibility-filter-input.scss
@@ -4,3 +4,7 @@
 .form-filter-true {
   display: block;
 }
+
+.isVisible-false {
+  display: none;
+}
